Fixing footer/content layout issue

--- a/client/style/app.less
+++ b/client/style/app.less
@@ -8,6 +8,8 @@
 @import "app-list.less";
 @import "navs.less";
 
+@footer-height: 60px;
+
 // Manager Styles
 // --------------------------------------------------
 body {
@@ -23,7 +25,7 @@ body {
 .wrap {
     width: 100%;
     min-height: 100%;
-    margin-bottom: -60px; /* equal to footer height */
+    margin-bottom: -(@footerheight); /* equal to footer height */
 }
 
 .wrap {
@@ -48,13 +50,6 @@ main {
   height: 100%;
 }
 
-a.nav-previous {
-  &:extend(.pull-right all);
-
-  margin: 2.5% 2% 0;
-  text-decoration: none;
-}
-
 .section-gray {
   margin-bottom: 1%;
   padding: 10px;
@@ -64,6 +59,33 @@ a.nav-previous {
   h3 {
     margin-top: 0;
   }
+
+  &:after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+}
+
+
+.form-group {
+  box-sizing: border-box;
+
+  &:before {
+    display: table;
+    content: " ";
+  }
+
+  &:after {
+    clear: both;
+  }
+}
+
+a.nav-previous {
+  &:extend(.pull-right all);
+
+  margin: 2.5% 2% 0;
+  text-decoration: none;
 }
 
 // Social Network Styling
@@ -131,14 +153,15 @@ i.fa-frown-o {
 
 footer,
 .wrap:after {
-  height: 60px;
+  height: @footer-height;
 }
 
 footer {
+  margin-top: @footer-height;
   position: relative;
   clear: both;
   width: 100%;
-  color: #FFF;
+  color: #FF0000;
   background-color: #393939;
 
   > div {
